finish js, settle on 2 functions ball bouncing from top and bottom, added a score and reset function

--- a/Breakout_Game/index.html
+++ b/Breakout_Game/index.html
@@ -11,6 +11,11 @@
     <div id="frame-container">
         <canvas id="frame"></canvas>
     </div>
+    <!--
+    <script src="player.js"></script>
+    <script src="Blocks.js"></script>
+    <script src="ball.js"></script>
+    -->
     <script src="app.js"></script>
 </body>
 </html>
